feat: better meta descriptions

--- a/src/pages/ask/[page].astro
+++ b/src/pages/ask/[page].astro
@@ -2,4 +2,9 @@
 import Feed from '../../components/Feed.astro';
 ---
 
-<Feed feed="ask" page={Astro.params.page ?? '1'} />
+<Feed
+  feed="ask"
+  page={Astro.params.page ?? '1'}
+  title="Ask"
+  description="Ask on Hacker News"
+/>
