--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,4 +2,4 @@
 import Feed from '../components/Feed.astro';
 ---
 
-<Feed feed="news" page="1" />
+<Feed feed="news" page="1" description="Front page of Hacker News" />
