--- a/src/pages/news/[page].astro
+++ b/src/pages/news/[page].astro
@@ -2,4 +2,8 @@
 import Feed from '../../components/Feed.astro';
 ---
 
-<Feed feed="news" page={Astro.params.page ?? '1'} />
+<Feed
+  feed="news"
+  page={Astro.params.page ?? '1'}
+  description="Hacker News feed"
+/>
