--- a/src/components/Feed.astro
+++ b/src/components/Feed.astro
@@ -6,15 +6,17 @@ import type { FeedItemModel } from '../models';
 interface Props {
   feed: string;
   page: string;
+  title?: string;
+  description: string;
 }
 
-const { feed, page } = Astro.props;
+const { feed, page, title, description } = Astro.props;
 
 const res = await fetch(`https://api.hnpwa.com/v0/${feed}/${page}.json`);
 const data = (await res.json()) as FeedItemModel[];
 ---
 
-<Layout title="Hacker News">
+<Layout title={title ? `${title} - Hacker News` : 'Hacker News'} {description}>
   <div class="flex flex-col gap-4">
     {data.map((item) => <FeedItem {...item} />)}
   </div>
