--- a/src/pages/items/[id].astro
+++ b/src/pages/items/[id].astro
@@ -19,6 +19,15 @@ const item = (await res.json()) as ItemModel;
     `${(item.points ?? 0).toLocaleString()} points`}
 >
   <FeedItem parent {...item} />
+  {
+    item.content && (
+      <>
+        <hr class="border-slate-800 my-3" />
+        <p set:html={item.content} />
+        <hr class="border-slate-800 my-3" />
+      </>
+    )
+  }
   <div class="flex flex-col gap-4 mt-3">
     {item.comments.map((comment) => <Comment client:idle {...comment} />)}
   </div>
