--- a/src/components/FeedItem.astro
+++ b/src/components/FeedItem.astro
@@ -57,6 +57,13 @@ const formattedTime = new Date(time * 1000).toLocaleDateString('en-US', {
     <Dot />
     <a href={`/items/${id}`}>{comments_count.toLocaleString()} comments</a>
     <Dot />
-    <span title={formattedTime}>{time_ago}</span>
+    <a
+      title={formattedTime}
+      href={`https://news.ycombinator.com/item?id=${id}`}
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      {time_ago}
+    </a>
   </div>
 </div>
