--- a/src/components/FeedItem.astro
+++ b/src/components/FeedItem.astro
@@ -34,7 +34,10 @@ const formattedTime = new Date(time * 1000).toLocaleDateString('en-US', {
       parent ? (
         <span class="text-xl text-slate-300 mr-1">{title}</span>
       ) : (
-        <a href={`/items/${id}`} class="text-xl text-slate-300 mr-1">
+        <a
+          href={`/items/${id}`}
+          class="text-xl text-slate-300 mr-1 transition hover:text-slate-200"
+        >
           {title}
         </a>
       )
