--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ const feeds = ['news', 'newest', 'show', 'ask', 'jobs'];
   </head>
   <body class="dark:bg-gray-900 dark:text-slate-400">
     <div class="mx-auto px-4 py-4 max-w-screen-md">
-      <div class="flex items-center justify-between">
+      <div class="flex items-center justify-between flex-col md:flex-row">
         <h1 class="text-3xl text-slate-200 font-semibold my-3">
           <a href="/">Hacker News</a>
         </h1>
