--- a/src/pages/items/[id].astro
+++ b/src/pages/items/[id].astro
@@ -29,7 +29,7 @@ const item = (await res.json()) as ItemModel;
       </>
     )
   }
-  <div class="flex flex-col gap-4 mt-3">
+  <div class="flex flex-col gap-4 mt-3 items-stretch">
     {
       item.comments.map((comment) => (
         <Comment client:idle {...comment} op={item.user} />
