--- a/src/components/FeedItem.astro
+++ b/src/components/FeedItem.astro
@@ -27,7 +27,10 @@ const formattedTime = new Date(time * 1000).toLocaleDateString('en-US', {
 });
 ---
 
-<div class="flex flex-col border-b-slate-800">
+<div
+  class="flex flex-col border-b-slate-800"
+  transition:name={`feed-item-${id}`}
+>
   <span class="text-slate-500 text-sm font-mono">{user}</span>
   <div>
     {
