--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -5,15 +5,16 @@ interface Props {
 }
 
 const { root, page } = Astro.props;
+const PreviousElement = page !== 1 ? 'a' : 'span';
 ---
 
 <div class="flex items-center justify-center my-3">
-  <a
+  <PreviousElement
     href={page !== 1 ? `${root}/${page - 1}` : undefined}
     class={`border border-slate-700 rounded-md px-3 rounded-r-none border-r-0 transition hover:text-slate-300 ${page === 1 ? 'disabled' : ''}`}
   >
     Previous
-  </a>
+  </PreviousElement>
   <span class="border border-slate-700 px-6 font-semibold">Page {page}</span>
   <a
     href={`${root}/${page + 1}`}
